Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,28 +148,28 @@
     // Replace this with your actual news data.
     const newsData = [
   {
-    "title": "Sếp Xiaomi thả dưa hấu từ tầng 6 chứng minh độ bền pin xe điện",
-    "content": "Giám đốc điều hành Xiaomi, Lei Jun, đã thực hiện một thử nghiệm thú vị để chứng minh độ bền của pin xe điện bằng cách thả một quả dưa hấu từ tầng 6 của nhà máy. Kết quả cho thấy quả dưa hấu không bị vỡ nhờ vào lớp bảo vệ 'áo giáp chống đạn' mà Xiaomi áp dụng cho pin xe điện SU7 Ultra. Công nghệ này giúp tăng cường độ bền và an toàn cho pin, với nhiều biện pháp bảo vệ như khung thép cường độ cao và hệ thống quản lý pin thông minh.",
-    "link": "https://vnexpress.net/sep-xiaomi-tha-dua-hau-tu-tang-6-chung-minh-do-ben-pin-xe-dien-4865604.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
+    "title": "Chữa ngứa bằng dịch kiến ba khoang, nam thanh niên nhập viện",
+    "content": "Một nam thanh niên 25 tuổi ở Hà Nội đã nhập viện do tổn thương da nghiêm trọng sau khi sử dụng dịch kiến ba khoang để chữa ngứa. Mặc dù đã thử nhiều phương pháp điều trị dân gian, nhưng tình trạng ngứa kéo dài đã khiến gia đình quyết định dùng kiến ba khoang, dẫn đến phản ứng viêm da tiếp xúc và tổn thương lan rộng. Tại bệnh viện, bệnh nhân được chẩn đoán mắc bệnh ghẻ kèm viêm da tiếp xúc, và bác sĩ cảnh báo về nguy cơ từ việc tự ý điều trị bằng phương pháp không rõ nguồn gốc.",
+    "link": "https://vnexpress.net/chua-ngua-bang-dich-kien-ba-khoang-nam-thanh-nien-nhap-vien-4865746.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
     "importance": 7,
-    "question": "Tại sao Lei Jun lại thả dưa hấu từ tầng 6 của nhà máy?",
+    "question": "Tại sao nam thanh niên phải nhập viện sau khi chữa ngứa bằng dịch kiến ba khoang?",
     "answers": [
       {
-        "text": "Để chứng minh độ bền của pin xe điện.",
+        "text": "Vì anh đã dùng dịch kiến ba khoang gây tổn thương da nghiêm trọng.",
         "correct": true
       },
       {
-        "text": "Để thử nghiệm độ an toàn của ô tô.",
+        "text": "Vì anh bị sốt cao.",
         "correct": false
       },
       {
-        "text": "Để quảng bá sản phẩm mới.",
+        "text": "Vì anh bị ngã khi đi lại.",
         "correct": false
       },
       {
-        "text": "Để tạo sự chú ý cho truyền thông.",
+        "text": "Vì anh không ăn uống đủ chất.",
         "correct": false
       }
     ]
@@ -201,6 +201,87 @@
       },
       {
         "text": "Phong cách công sở",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những điều người EQ cao không làm",
+    "content": "Theo tiến sĩ Travis Bradberry, người có trí tuệ cảm xúc cao (EQ) không bao giờ làm những điều như để người khác giới hạn niềm vui của mình, quên bài học từ quá khứ, hay chìm đắm trong vấn đề. Họ cũng không sống trong sự hoàn hảo, không giữ mối hận thù, và biết cách nói 'không' khi cần thiết. Những người này hiểu rằng để duy trì cảm xúc tích cực, họ phải tránh những người tiêu cực và tập trung vào giải pháp thay vì vấn đề.",
+    "link": "https://vnexpress.net/nhung-dieu-nguoi-eq-cao-khong-lam-4865612.html",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những điều gì người có EQ cao không làm?",
+    "answers": [
+      {
+        "text": "Họ không để người khác giới hạn niềm vui của mình.",
+        "correct": true
+      },
+      {
+        "text": "Họ luôn sống trong quá khứ.",
+        "correct": false
+      },
+      {
+        "text": "Họ không bao giờ tha thứ cho người khác.",
+        "correct": false
+      },
+      {
+        "text": "Họ ưu tiên sự hoàn hảo.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những bệnh HPV gây ra ở nam giới",
+    "content": "Nam giới nhiễm virus HPV có thể bị các bệnh sùi mào gà, ung thư hầu họng và ung thư hậu môn, với khoảng 40 chủng virus HPV liên quan đến bộ phận sinh dục. Sùi mào gà thường gặp ở người có lối sống tình dục không lành mạnh, trong khi ung thư hầu họng liên quan đến HPV chiếm 60-70% trường hợp. Tiêm vaccine HPV là phương pháp hiệu quả để phòng ngừa các bệnh này, với hai loại vaccine Gardasil và Gardasil 9 hiện có tại Việt Nam.",
+    "link": "https://vnexpress.net/nhung-benh-hpv-gay-ra-o-nam-gioi-4865772.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những bệnh gì do HPV gây ra ở nam giới?",
+    "answers": [
+      {
+        "text": "Sùi mào gà, ung thư hầu họng, ung thư hậu môn",
+        "correct": true
+      },
+      {
+        "text": "Cúm, sởi, quai bị",
+        "correct": false
+      },
+      {
+        "text": "Tiểu đường, tăng huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tim mạch, đột quỵ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sếp Xiaomi thả dưa hấu từ tầng 6 chứng minh độ bền pin xe điện",
+    "content": "Giám đốc điều hành Xiaomi, Lei Jun, đã thực hiện một thử nghiệm thú vị để chứng minh độ bền của pin xe điện bằng cách thả một quả dưa hấu từ tầng 6 của nhà máy. Kết quả cho thấy quả dưa hấu không bị vỡ nhờ vào lớp bảo vệ 'áo giáp chống đạn' mà Xiaomi áp dụng cho pin xe điện SU7 Ultra. Công nghệ này giúp tăng cường độ bền và an toàn cho pin, với nhiều biện pháp bảo vệ như khung thép cường độ cao và hệ thống quản lý pin thông minh.",
+    "link": "https://vnexpress.net/sep-xiaomi-tha-dua-hau-tu-tang-6-chung-minh-do-ben-pin-xe-dien-4865604.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Lei Jun lại thả dưa hấu từ tầng 6 của nhà máy?",
+    "answers": [
+      {
+        "text": "Để chứng minh độ bền của pin xe điện.",
+        "correct": true
+      },
+      {
+        "text": "Để thử nghiệm độ an toàn của ô tô.",
+        "correct": false
+      },
+      {
+        "text": "Để quảng bá sản phẩm mới.",
+        "correct": false
+      },
+      {
+        "text": "Để tạo sự chú ý cho truyền thông.",
         "correct": false
       }
     ]
@@ -3204,33 +3285,6 @@
     ]
   },
   {
-    "title": "Siêu mẫu Minh Tú sau kết hôn: Thay đổi \"180 độ\", chồng Tây cưng chiều",
-    "content": "Siêu mẫu Minh Tú đã có nhiều thay đổi tích cực trong cuộc sống sau khi kết hôn với chồng Tây, Christopher. Cô chia sẻ rằng sau khi về chung một nhà, tính cách của mình đã trở nên mềm mỏng và nữ tính hơn, thường xuyên vào bếp nấu ăn và chăm sóc tổ ấm. Minh Tú cũng cho biết chồng là nguồn động viên lớn, giúp cô vượt qua giai đoạn khó khăn trong cuộc sống. Hai người thường xuyên dành thời gian cho nhau, đi du lịch và thể hiện tình cảm ngọt ngào qua những hành động nhỏ.",
-    "link": "https://dantri.com.vn/giai-tri/sieu-mau-minh-tu-sau-ket-hon-thay-doi-180-do-chong-tay-cung-chieu-20250324145813189.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Minh Tú đã thay đổi như thế nào sau khi kết hôn?",
-    "answers": [
-      {
-        "text": "Cô trở nên nữ tính và chăm sóc gia đình hơn.",
-        "correct": true
-      },
-      {
-        "text": "Cô vẫn giữ nguyên tính cách mạnh mẽ như trước.",
-        "correct": false
-      },
-      {
-        "text": "Cô không còn tham gia vào các hoạt động xã hội.",
-        "correct": false
-      },
-      {
-        "text": "Cô trở nên ít nổi tiếng hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mỹ phát triển SUV bọc thép mới bảo vệ Tổng thống",
     "content": "Giám đốc Cơ quan Mật vụ Mỹ vừa có cuộc gặp với lãnh đạo General Motors để thảo luận về việc phát triển SUV bọc thép mới nhằm bảo vệ Tổng thống. Cuộc họp diễn ra trong bối cảnh GM đang chế tạo phiên bản mới của chiếc limousine dành cho Tổng thống có biệt danh \"The Beast\". Hợp đồng trị giá 14,8 triệu USD đã được ký kết với GM để tiến hành dự án này, nhưng thời gian ra mắt xe mới vẫn chưa được xác định.",
     "link": "https://vnexpress.net/my-phat-trien-suv-boc-thep-moi-bao-ve-tong-thong-4865414.html",
@@ -3257,6 +3311,33 @@
       },
       {
         "text": "Xe điện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Siêu mẫu Minh Tú sau kết hôn: Thay đổi \"180 độ\", chồng Tây cưng chiều",
+    "content": "Siêu mẫu Minh Tú đã có nhiều thay đổi tích cực trong cuộc sống sau khi kết hôn với chồng Tây, Christopher. Cô chia sẻ rằng sau khi về chung một nhà, tính cách của mình đã trở nên mềm mỏng và nữ tính hơn, thường xuyên vào bếp nấu ăn và chăm sóc tổ ấm. Minh Tú cũng cho biết chồng là nguồn động viên lớn, giúp cô vượt qua giai đoạn khó khăn trong cuộc sống. Hai người thường xuyên dành thời gian cho nhau, đi du lịch và thể hiện tình cảm ngọt ngào qua những hành động nhỏ.",
+    "link": "https://dantri.com.vn/giai-tri/sieu-mau-minh-tu-sau-ket-hon-thay-doi-180-do-chong-tay-cung-chieu-20250324145813189.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Minh Tú đã thay đổi như thế nào sau khi kết hôn?",
+    "answers": [
+      {
+        "text": "Cô trở nên nữ tính và chăm sóc gia đình hơn.",
+        "correct": true
+      },
+      {
+        "text": "Cô vẫn giữ nguyên tính cách mạnh mẽ như trước.",
+        "correct": false
+      },
+      {
+        "text": "Cô không còn tham gia vào các hoạt động xã hội.",
+        "correct": false
+      },
+      {
+        "text": "Cô trở nên ít nổi tiếng hơn.",
         "correct": false
       }
     ]
@@ -3471,33 +3552,6 @@
     ]
   },
   {
-    "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
-    "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
-    "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Eco Central Park ở miền Trung có gì đặc biệt cho cư dân?",
-    "answers": [
-      {
-        "text": "Cung cấp không gian sống, làm việc và giải trí đa thế hệ.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có cây xanh và mặt nước.",
-        "correct": false
-      },
-      {
-        "text": "Không có trường học và khu thể thao.",
-        "correct": false
-      },
-      {
-        "text": "Là một khu đô thị nhỏ với ít tiện ích.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu nhận biết nốt ruồi có nguy cơ ung thư",
     "content": "Nốt ruồi có thể là dấu hiệu cảnh báo ung thư da, đặc biệt là u hắc tố ác tính. Những dấu hiệu cần lưu ý bao gồm sự bất đối xứng, bờ không đều, màu sắc bất thường và đường kính lớn hơn 6 mm. Nếu nốt ruồi biến đổi theo thời gian hoặc có triệu chứng như ngứa, đau, cần thăm khám bác sĩ ngay. Để phòng ngừa, nên tránh nắng gắt và kiểm tra da thường xuyên.",
     "link": "https://vnexpress.net/dau-hieu-nhan-biet-not-ruoi-co-nguy-co-ung-thu-4865300.html",
@@ -3520,6 +3574,33 @@
       },
       {
         "text": "Nốt ruồi không thay đổi theo thời gian.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
+    "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
+    "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Eco Central Park ở miền Trung có gì đặc biệt cho cư dân?",
+    "answers": [
+      {
+        "text": "Cung cấp không gian sống, làm việc và giải trí đa thế hệ.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có cây xanh và mặt nước.",
+        "correct": false
+      },
+      {
+        "text": "Không có trường học và khu thể thao.",
+        "correct": false
+      },
+      {
+        "text": "Là một khu đô thị nhỏ với ít tiện ích.",
         "correct": false
       }
     ]
@@ -3900,33 +3981,6 @@
     ]
   },
   {
-    "title": "4 cơ chế gây ung thư của rượu bia",
-    "content": "Rượu bia có thể gây ung thư thông qua bốn cơ chế chính: làm tổn thương DNA, gây viêm nhiễm, rối loạn hormone và hỗ trợ hấp thụ các chất gây ung thư khác. Theo nghiên cứu, ngay cả việc tiêu thụ một lượng nhỏ rượu cũng có thể làm tăng nguy cơ ung thư, đặc biệt là ung thư vú do sự gia tăng nồng độ estrogen. Cựu Tổng Y sĩ Mỹ đã nhấn mạnh mối liên hệ này và kêu gọi dán nhãn cảnh báo trên các sản phẩm có cồn.",
-    "link": "https://vnexpress.net/4-co-che-gay-ung-thu-cua-ruou-bia-4865332.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Rượu bia gây ung thư qua những cơ chế nào?",
-    "answers": [
-      {
-        "text": "Gây tổn thương DNA, viêm nhiễm, rối loạn hormone, hấp thụ chất gây ung thư khác",
-        "correct": true
-      },
-      {
-        "text": "Chỉ làm tăng nguy cơ béo phì",
-        "correct": false
-      },
-      {
-        "text": "Không gây ảnh hưởng gì đến sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Chỉ gây nghiện và không gây ung thư",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xe bán  tải Mỹ bị lo ngại gây ô nhiễm môi trường ở Đức",
     "content": "Tổ chức Hành động Môi trường Đức (DUH) đã khởi kiện Cục Giao thông vận tải liên bang Đức nhằm yêu cầu công bố dữ liệu về xe bán tải Mỹ, cho rằng dòng xe này gây ô nhiễm nghiêm trọng và không đáp ứng các tiêu chuẩn an toàn của EU. Xe bán tải cỡ lớn như Ford F-Series và Ram phát thải CO2 cao gấp 9 lần so với xe châu Âu thông thường. DUH cảnh báo rằng việc cho phép các xe này hoạt động mà không tuân thủ quy định có thể dẫn đến thiệt hại lớn cho môi trường và gia tăng tai nạn giao thông.",
     "link": "https://vnexpress.net/xe-ban-tai-my-bi-lo-ngai-gay-o-nhiem-moi-truong-o-duc-4864995.html",
@@ -4007,6 +4061,33 @@
       },
       {
         "text": "Từ tháng 5 đến tháng 10 năm 2023",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 cơ chế gây ung thư của rượu bia",
+    "content": "Rượu bia có thể gây ung thư thông qua bốn cơ chế chính: làm tổn thương DNA, gây viêm nhiễm, rối loạn hormone và hỗ trợ hấp thụ các chất gây ung thư khác. Theo nghiên cứu, ngay cả việc tiêu thụ một lượng nhỏ rượu cũng có thể làm tăng nguy cơ ung thư, đặc biệt là ung thư vú do sự gia tăng nồng độ estrogen. Cựu Tổng Y sĩ Mỹ đã nhấn mạnh mối liên hệ này và kêu gọi dán nhãn cảnh báo trên các sản phẩm có cồn.",
+    "link": "https://vnexpress.net/4-co-che-gay-ung-thu-cua-ruou-bia-4865332.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Rượu bia gây ung thư qua những cơ chế nào?",
+    "answers": [
+      {
+        "text": "Gây tổn thương DNA, viêm nhiễm, rối loạn hormone, hấp thụ chất gây ung thư khác",
+        "correct": true
+      },
+      {
+        "text": "Chỉ làm tăng nguy cơ béo phì",
+        "correct": false
+      },
+      {
+        "text": "Không gây ảnh hưởng gì đến sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Chỉ gây nghiện và không gây ung thư",
         "correct": false
       }
     ]
@@ -4151,37 +4232,6 @@
     ]
   },
   {
-    "title": "Giảm 16 cm vòng eo, người phụ nữ 'lột xác'",
-    "content": "Chị Lê Thị Sủi, 35 tuổi, đã giảm 16 cm vòng eo và cải thiện vóc dáng nhờ chế độ dinh dưỡng khoa học và tập luyện đều đặn 6 buổi mỗi tuần. Sau khi trải qua quá trình giảm cân, chị không chỉ có vòng eo từ 79 cm xuống 63 cm mà còn trở thành huấn luyện viên dinh dưỡng và thể hình, truyền cảm hứng cho nhiều người. Sự thay đổi này không chỉ cải thiện sức khỏe mà còn mang lại cho chị sự tự tin và hạnh phúc trong cuộc sống.",
-    "link": "https://vnexpress.net/giam-16-cm-vong-eo-nguoi-phu-nu-lot-xac-4864021.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Lê Thị Sủi đã giảm bao nhiêu cm vòng eo?",
-    "answers": [
-      {
-        "text": "16 cm",
-        "correct": true
-      },
-      {
-        "text": "10 cm",
-        "correct": false
-      },
-      {
-        "text": "12 cm",
-        "correct": false
-      },
-      {
-        "text": "14 cm",
-        "correct": false
-      },
-      {
-        "text": "18 cm",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Honda Rebel 300 E-Clutch mới giá 4.700 USD",
     "content": "Honda vừa ra mắt mẫu xe Rebel 300 E-Clutch mới tại triển lãm Bangkok Motor Show 2025. Đây là mẫu xe 300 phân khối đầu tiên trên thế giới trang bị ly hợp điện tử E-Clutch, trước đây chỉ có ở dòng 650 phân khối. Rebel 300 có động cơ xi-lanh đơn 286 phân khối, hộp số 6 cấp và trọng lượng 170 kg, nhắm đến khách hàng lần đầu sử dụng xe phân khối lớn. Giá bán của xe là 4.700 USD.",
     "link": "https://vnexpress.net/honda-rebel-300-e-clutch-moi-gia-4-700-usd-4864980.html",
@@ -4208,6 +4258,37 @@
       },
       {
         "text": "4.000 USD",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Giảm 16 cm vòng eo, người phụ nữ 'lột xác'",
+    "content": "Chị Lê Thị Sủi, 35 tuổi, đã giảm 16 cm vòng eo và cải thiện vóc dáng nhờ chế độ dinh dưỡng khoa học và tập luyện đều đặn 6 buổi mỗi tuần. Sau khi trải qua quá trình giảm cân, chị không chỉ có vòng eo từ 79 cm xuống 63 cm mà còn trở thành huấn luyện viên dinh dưỡng và thể hình, truyền cảm hứng cho nhiều người. Sự thay đổi này không chỉ cải thiện sức khỏe mà còn mang lại cho chị sự tự tin và hạnh phúc trong cuộc sống.",
+    "link": "https://vnexpress.net/giam-16-cm-vong-eo-nguoi-phu-nu-lot-xac-4864021.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Lê Thị Sủi đã giảm bao nhiêu cm vòng eo?",
+    "answers": [
+      {
+        "text": "16 cm",
+        "correct": true
+      },
+      {
+        "text": "10 cm",
+        "correct": false
+      },
+      {
+        "text": "12 cm",
+        "correct": false
+      },
+      {
+        "text": "14 cm",
+        "correct": false
+      },
+      {
+        "text": "18 cm",
         "correct": false
       }
     ]
