--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "'Không để chạy chọt khi sắp xếp đơn vị hành chính'",
+    "content": "Thường trực Ban Chỉ đạo Trung ương về phòng chống tham nhũng, lãng phí, tiêu cực đã yêu cầu không để xảy ra tình trạng chạy chọt và lợi ích nhóm trong quá trình sắp xếp các đơn vị hành chính. Tại phiên họp ngày 25/3, các cấp ủy và lãnh đạo cần tăng cường kiểm tra, giám sát nhằm đảm bảo tính minh bạch và hiệu quả trong công tác cán bộ. Ngoài ra, Ban Chỉ đạo nhấn mạnh tầm quan trọng của việc xử lý các tài sản công không sử dụng hiệu quả và yêu cầu thanh tra các dự án có nguy cơ thất thoát.",
+    "link": "https://vnexpress.net/khong-de-chay-chot-khi-sap-xep-don-vi-hanh-chinh-4865816.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Ban Chỉ đạo yêu cầu điều gì khi sắp xếp đơn vị hành chính?",
+    "answers": [
+      {
+        "text": "Không để xảy ra tình trạng chạy chọt và lợi ích nhóm",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường xây dựng cơ sở hạ tầng",
+        "correct": false
+      },
+      {
+        "text": "Giảm số lượng đơn vị hành chính",
+        "correct": false
+      },
+      {
+        "text": "Thay đổi lãnh đạo cấp cao",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường ngân sách cho các dự án",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chữa ngứa bằng dịch kiến ba khoang, nam thanh niên nhập viện",
     "content": "Một nam thanh niên 25 tuổi ở Hà Nội đã nhập viện do tổn thương da nghiêm trọng sau khi sử dụng dịch kiến ba khoang để chữa ngứa. Mặc dù đã thử nhiều phương pháp điều trị dân gian, nhưng tình trạng ngứa kéo dài đã khiến gia đình quyết định dùng kiến ba khoang, dẫn đến phản ứng viêm da tiếp xúc và tổn thương lan rộng. Tại bệnh viện, bệnh nhân được chẩn đoán mắc bệnh ghẻ kèm viêm da tiếp xúc, và bác sĩ cảnh báo về nguy cơ từ việc tự ý điều trị bằng phương pháp không rõ nguồn gốc.",
     "link": "https://vnexpress.net/chua-ngua-bang-dich-kien-ba-khoang-nam-thanh-nien-nhap-vien-4865746.html",
@@ -175,28 +206,32 @@
     ]
   },
   {
-    "title": "Những điều người EQ cao không làm",
-    "content": "Theo tiến sĩ Travis Bradberry, người có trí tuệ cảm xúc cao (EQ) không bao giờ làm những điều như để người khác giới hạn niềm vui của mình, quên bài học từ quá khứ, hay chìm đắm trong vấn đề. Họ cũng không sống trong sự hoàn hảo, không giữ mối hận thù, và biết cách nói 'không' khi cần thiết. Những người này hiểu rằng để duy trì cảm xúc tích cực, họ phải tránh những người tiêu cực và tập trung vào giải pháp thay vì vấn đề.",
-    "link": "https://vnexpress.net/nhung-dieu-nguoi-eq-cao-khong-lam-4865612.html",
+    "title": "Doãn Hải My thu hút ánh nhìn với phong cách nữ tính",
+    "content": "Doãn Hải My, vợ cầu thủ Đoàn Văn Hậu, đã thu hút được sự chú ý của giới mộ điệu thời trang với phong cách nữ tính và hiện đại. Cô đã phối đồ và lựa chọn túi xách theo xu hướng thời trang đang được ưa chuộng toàn cầu, đặc biệt là các mẫu túi mini. Thiết kế trang phục của cô mang đậm dấu ấn cá tính và thanh lịch, phù hợp với xu hướng mùa xuân hè năm nay.",
+    "link": "https://dantri.com.vn/giai-tri/doan-hai-my-thu-hut-anh-nhin-voi-phong-cach-nu-tinh-20250324173039479.htm",
     "cat": "giai-tri",
-    "positivity": 8,
+    "positivity": 9,
     "importance": 7,
-    "question": "Những điều gì người có EQ cao không làm?",
+    "question": "Doãn Hải My thu hút sự chú ý với phong cách gì?",
     "answers": [
       {
-        "text": "Họ không để người khác giới hạn niềm vui của mình.",
+        "text": "Phong cách nữ tính",
         "correct": true
       },
       {
-        "text": "Họ luôn sống trong quá khứ.",
+        "text": "Phong cách nam tính",
         "correct": false
       },
       {
-        "text": "Họ không bao giờ tha thứ cho người khác.",
+        "text": "Phong cách thể thao",
         "correct": false
       },
       {
-        "text": "Họ ưu tiên sự hoàn hảo.",
+        "text": "Phong cách truyền thống",
+        "correct": false
+      },
+      {
+        "text": "Phong cách công sở",
         "correct": false
       }
     ]
@@ -229,6 +264,33 @@
     ]
   },
   {
+    "title": "Những điều người EQ cao không làm",
+    "content": "Theo tiến sĩ Travis Bradberry, người có trí tuệ cảm xúc cao (EQ) không bao giờ làm những điều như để người khác giới hạn niềm vui của mình, quên bài học từ quá khứ, hay chìm đắm trong vấn đề. Họ cũng không sống trong sự hoàn hảo, không giữ mối hận thù, và biết cách nói 'không' khi cần thiết. Những người này hiểu rằng để duy trì cảm xúc tích cực, họ phải tránh những người tiêu cực và tập trung vào giải pháp thay vì vấn đề.",
+    "link": "https://vnexpress.net/nhung-dieu-nguoi-eq-cao-khong-lam-4865612.html",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những điều gì người có EQ cao không làm?",
+    "answers": [
+      {
+        "text": "Họ không để người khác giới hạn niềm vui của mình.",
+        "correct": true
+      },
+      {
+        "text": "Họ luôn sống trong quá khứ.",
+        "correct": false
+      },
+      {
+        "text": "Họ không bao giờ tha thứ cho người khác.",
+        "correct": false
+      },
+      {
+        "text": "Họ ưu tiên sự hoàn hảo.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sếp Xiaomi thả dưa hấu từ tầng 6 chứng minh độ bền pin xe điện",
     "content": "Giám đốc điều hành Xiaomi, Lei Jun, đã thực hiện một thử nghiệm thú vị để chứng minh độ bền của pin xe điện bằng cách thả một quả dưa hấu từ tầng 6 của nhà máy. Kết quả cho thấy quả dưa hấu không bị vỡ nhờ vào lớp bảo vệ 'áo giáp chống đạn' mà Xiaomi áp dụng cho pin xe điện SU7 Ultra. Công nghệ này giúp tăng cường độ bền và an toàn cho pin, với nhiều biện pháp bảo vệ như khung thép cường độ cao và hệ thống quản lý pin thông minh.",
     "link": "https://vnexpress.net/sep-xiaomi-tha-dua-hau-tu-tang-6-chung-minh-do-ben-pin-xe-dien-4865604.html",
@@ -251,37 +313,6 @@
       },
       {
         "text": "Để tạo sự chú ý cho truyền thông.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Doãn Hải My thu hút ánh nhìn với phong cách nữ tính",
-    "content": "Doãn Hải My, vợ cầu thủ Đoàn Văn Hậu, đã thu hút được sự chú ý của giới mộ điệu thời trang với phong cách nữ tính và hiện đại. Cô đã phối đồ và lựa chọn túi xách theo xu hướng thời trang đang được ưa chuộng toàn cầu, đặc biệt là các mẫu túi mini. Thiết kế trang phục của cô mang đậm dấu ấn cá tính và thanh lịch, phù hợp với xu hướng mùa xuân hè năm nay.",
-    "link": "https://dantri.com.vn/giai-tri/doan-hai-my-thu-hut-anh-nhin-voi-phong-cach-nu-tinh-20250324173039479.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Doãn Hải My thu hút sự chú ý với phong cách gì?",
-    "answers": [
-      {
-        "text": "Phong cách nữ tính",
-        "correct": true
-      },
-      {
-        "text": "Phong cách nam tính",
-        "correct": false
-      },
-      {
-        "text": "Phong cách thể thao",
-        "correct": false
-      },
-      {
-        "text": "Phong cách truyền thống",
-        "correct": false
-      },
-      {
-        "text": "Phong cách công sở",
         "correct": false
       }
     ]
@@ -635,33 +666,6 @@
     ]
   },
   {
-    "title": "Kháng insulin gây mụn trứng cá thế nào",
-    "content": "Kháng insulin có thể làm tăng mức độ hormone androgen trong cơ thể, từ đó thúc đẩy tăng tiết bã nhờn và làm nặng thêm tình trạng mụn trứng cá. Tình trạng này thường gặp ở thanh thiếu niên và người lớn, gây ra bởi sự tích tụ đường trong máu và kích thích các tuyến sản xuất hormone. Đặc biệt, kháng insulin còn liên quan đến viêm mạn tính, làm cho tình trạng mụn trở nên nghiêm trọng hơn, đặc biệt là ở phụ nữ có hội chứng buồng trứng đa nang (PCOS). Để điều trị, cần kết hợp giữa phương pháp da liễu và thay đổi lối sống, bao gồm chế độ ăn uống lành mạnh.",
-    "link": "https://vnexpress.net/khang-insulin-gay-mun-trung-ca-the-nao-4865724.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Kháng insulin ảnh hưởng đến mụn trứng cá như thế nào?",
-    "answers": [
-      {
-        "text": "Kháng insulin làm tăng hormone androgen, gây ra mụn trứng cá.",
-        "correct": true
-      },
-      {
-        "text": "Kháng insulin không có ảnh hưởng đến mụn trứng cá.",
-        "correct": false
-      },
-      {
-        "text": "Kháng insulin chỉ gây ra các vấn đề về tiêu hóa.",
-        "correct": false
-      },
-      {
-        "text": "Kháng insulin làm giảm bã nhờn trên da.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cách làm món cà chua nhồi thịt",
     "content": "Món cà chua nhồi thịt là một món ăn ngon, dễ làm và phù hợp với khẩu vị của trẻ nhỏ và người già. Nguyên liệu chính bao gồm cà chua, thịt nạc vai, mộc nhĩ và các gia vị khác. Quy trình chế biến bao gồm sơ chế cà chua, ướp thịt, nhồi nhân vào cà chua và nấu chín bằng nhiều phương pháp khác nhau như rán, nướng hoặc chiên không dầu. Thành phẩm là món cà chua nhồi thịt giữ nguyên hình dáng, có thịt mềm ngọt và sốt cà chua mịn màng.",
     "link": "https://vnexpress.net/cach-lam-mon-ca-chua-nhoi-thit-4865726.html",
@@ -684,6 +688,33 @@
       },
       {
         "text": "Thịt gà, khoai tây, hành tây",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Kháng insulin gây mụn trứng cá thế nào",
+    "content": "Kháng insulin có thể làm tăng mức độ hormone androgen trong cơ thể, từ đó thúc đẩy tăng tiết bã nhờn và làm nặng thêm tình trạng mụn trứng cá. Tình trạng này thường gặp ở thanh thiếu niên và người lớn, gây ra bởi sự tích tụ đường trong máu và kích thích các tuyến sản xuất hormone. Đặc biệt, kháng insulin còn liên quan đến viêm mạn tính, làm cho tình trạng mụn trở nên nghiêm trọng hơn, đặc biệt là ở phụ nữ có hội chứng buồng trứng đa nang (PCOS). Để điều trị, cần kết hợp giữa phương pháp da liễu và thay đổi lối sống, bao gồm chế độ ăn uống lành mạnh.",
+    "link": "https://vnexpress.net/khang-insulin-gay-mun-trung-ca-the-nao-4865724.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Kháng insulin ảnh hưởng đến mụn trứng cá như thế nào?",
+    "answers": [
+      {
+        "text": "Kháng insulin làm tăng hormone androgen, gây ra mụn trứng cá.",
+        "correct": true
+      },
+      {
+        "text": "Kháng insulin không có ảnh hưởng đến mụn trứng cá.",
+        "correct": false
+      },
+      {
+        "text": "Kháng insulin chỉ gây ra các vấn đề về tiêu hóa.",
+        "correct": false
+      },
+      {
+        "text": "Kháng insulin làm giảm bã nhờn trên da.",
         "correct": false
       }
     ]
@@ -1257,33 +1288,6 @@
     ]
   },
   {
-    "title": "Bệnh lao phổi có thể chữa khỏi không?",
-    "content": "Bệnh lao phổi có thể chữa khỏi hoàn toàn nếu được phát hiện sớm và điều trị theo đúng phác đồ. Tỷ lệ điều trị thành công đối với lao phổi nhạy cảm với thuốc lên đến khoảng 95%, trong khi lao kháng thuốc có tỷ lệ thành công từ 60-80%. Người bệnh cần tuân thủ nghiêm ngặt thời gian và liều lượng thuốc, đồng thời duy trì chế độ dinh dưỡng hợp lý để tăng cường sức đề kháng.",
-    "link": "https://vnexpress.net/benh-lao-phoi-co-the-chua-khoi-khong-4865645.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Bệnh lao phổi có chữa khỏi hoàn toàn không?",
-    "answers": [
-      {
-        "text": "Có, nếu phát hiện sớm và điều trị đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, bệnh lao phổi không thể chữa khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở những người trẻ tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ với thuốc đặc trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "VAS tiên phong chuyển đổi số, tích hợp AI vào giảng dạy cho học sinh",
     "content": "Trường Quốc tế Việt Úc (VAS) đang tiên phong trong việc chuyển đổi số và tích hợp trí tuệ nhân tạo (AI) vào chương trình giảng dạy cho học sinh. Được tổ chức vào ngày 15/3, hội thảo \"Tối ưu cuộc sống với AI\" thu hút sự tham gia của hơn 200 phụ huynh và 1 triệu lượt xem trực tuyến. Từ năm học 2025-2026, học sinh VAS sẽ có một tiết học về AI mỗi tuần, nhằm trang bị kỹ năng cần thiết cho thế hệ công dân số. VAS cam kết không ngừng đổi mới và phát triển để giữ vững vị thế hàng đầu trong giáo dục quốc tế tại Việt Nam.",
     "link": "https://dantri.com.vn/giao-duc/vas-tien-phong-chuyen-doi-so-tich-hop-ai-vao-giang-day-cho-hoc-sinh-20250325141325818.htm",
@@ -1306,6 +1310,33 @@
       },
       {
         "text": "Học sinh chỉ học lý thuyết về AI.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bệnh lao phổi có thể chữa khỏi không?",
+    "content": "Bệnh lao phổi có thể chữa khỏi hoàn toàn nếu được phát hiện sớm và điều trị theo đúng phác đồ. Tỷ lệ điều trị thành công đối với lao phổi nhạy cảm với thuốc lên đến khoảng 95%, trong khi lao kháng thuốc có tỷ lệ thành công từ 60-80%. Người bệnh cần tuân thủ nghiêm ngặt thời gian và liều lượng thuốc, đồng thời duy trì chế độ dinh dưỡng hợp lý để tăng cường sức đề kháng.",
+    "link": "https://vnexpress.net/benh-lao-phoi-co-the-chua-khoi-khong-4865645.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Bệnh lao phổi có chữa khỏi hoàn toàn không?",
+    "answers": [
+      {
+        "text": "Có, nếu phát hiện sớm và điều trị đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, bệnh lao phổi không thể chữa khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở những người trẻ tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ với thuốc đặc trị.",
         "correct": false
       }
     ]
@@ -2076,33 +2107,6 @@
     ]
   },
   {
-    "title": "Làm thế nào giảm đau đầu do tăng huyết áp?",
-    "content": "Đau đầu do tăng huyết áp là triệu chứng phổ biến ở người cao tuổi, xảy ra khi huyết áp tăng cao gây áp lực lên mạch máu não. Để giảm đau đầu, người bệnh cần kiểm soát huyết áp bằng cách sử dụng thuốc theo chỉ định bác sĩ, ăn uống lành mạnh, duy trì chế độ tập thể dục đều đặn, và đảm bảo giấc ngủ đủ. Nếu cơn đau đầu kéo dài hoặc có triệu chứng nghiêm trọng khác, người bệnh nên đến cơ sở y tế để kiểm tra.",
-    "link": "https://vnexpress.net/lam-the-nao-giam-dau-dau-do-tang-huyet-ap-4865487.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để giảm đau đầu do tăng huyết áp?",
-    "answers": [
-      {
-        "text": "Kiểm soát huyết áp và duy trì lối sống lành mạnh.",
-        "correct": true
-      },
-      {
-        "text": "Uống nhiều nước lạnh.",
-        "correct": false
-      },
-      {
-        "text": "Sử dụng thuốc giảm đau tự do.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường ăn đồ ngọt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "7 món ăn màu tím có lợi cho sức khỏe tinh thần",
     "content": "Bài viết giới thiệu bảy món ăn màu tím như cà tím, bắp cải tím, mận, và hành tím, đều chứa nhiều chất chống oxy hóa anthocyanin và có lợi cho sức khỏe tinh thần. Những thực phẩm này không chỉ hỗ trợ giấc ngủ, cải thiện sức khỏe thể chất mà còn giúp tăng cường chức năng nhận thức và giảm nguy cơ mắc các bệnh thoái hóa thần kinh. Ngoài ra, các món ăn màu tím còn giàu vitamin và khoáng chất như kali, magie, và có khả năng chống viêm và chống ung thư.",
     "link": "https://vnexpress.net/7-mon-an-mau-tim-co-loi-cho-suc-khoe-tinh-than-4865474.html",
@@ -2129,6 +2133,33 @@
       },
       {
         "text": "Dưa hấu",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Làm thế nào giảm đau đầu do tăng huyết áp?",
+    "content": "Đau đầu do tăng huyết áp là triệu chứng phổ biến ở người cao tuổi, xảy ra khi huyết áp tăng cao gây áp lực lên mạch máu não. Để giảm đau đầu, người bệnh cần kiểm soát huyết áp bằng cách sử dụng thuốc theo chỉ định bác sĩ, ăn uống lành mạnh, duy trì chế độ tập thể dục đều đặn, và đảm bảo giấc ngủ đủ. Nếu cơn đau đầu kéo dài hoặc có triệu chứng nghiêm trọng khác, người bệnh nên đến cơ sở y tế để kiểm tra.",
+    "link": "https://vnexpress.net/lam-the-nao-giam-dau-dau-do-tang-huyet-ap-4865487.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để giảm đau đầu do tăng huyết áp?",
+    "answers": [
+      {
+        "text": "Kiểm soát huyết áp và duy trì lối sống lành mạnh.",
+        "correct": true
+      },
+      {
+        "text": "Uống nhiều nước lạnh.",
+        "correct": false
+      },
+      {
+        "text": "Sử dụng thuốc giảm đau tự do.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường ăn đồ ngọt.",
         "correct": false
       }
     ]
