Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Truyền ối giữ thai nhi thêm 14 tuần",
+    "content": "Một thai phụ 32 tuổi đã trải qua ca điều trị khó khăn tại Bệnh viện Phụ sản Hà Nội khi phát hiện thai nhi bị thiếu ối và chậm tăng trưởng từ tuần 20. Sau khi được truyền ối, thai nhi đã phát triển và chào đời khỏe mạnh ở tuần 34 với trọng lượng 1800g. Kỹ thuật truyền ối được coi là một bước tiến lớn trong sản phụ khoa, giúp tạo môi trường an toàn cho thai nhi phát triển.",
+    "link": "https://vnexpress.net/truyen-oi-giu-thai-nhi-them-14-tuan-4865547.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Truyền ối có tác dụng gì đối với thai nhi?",
+    "answers": [
+      {
+        "text": "Giúp thai nhi phát triển an toàn",
+        "correct": true
+      },
+      {
+        "text": "Làm tăng nguy cơ sinh non",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng gì",
+        "correct": false
+      },
+      {
+        "text": "Giảm cân nặng của thai nhi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xe bồn tông ôtô 4 chỗ lật ngửa trên đường",
     "content": "Vào chiều ngày 25/3/2025, một vụ tai nạn xảy ra trên quốc lộ 1 đoạn qua huyện Vạn Ninh, Khánh Hòa khi xe bồn tông vào ôtô 4 chỗ khiến xe này lật ngửa. Cú tông mạnh đã làm ba người trên xe ôtô bị thương nhẹ. Nhiều người dân đã kịp thời hỗ trợ đưa các nạn nhân ra ngoài. Hiện tại, cảnh sát giao thông đang điều tra nguyên nhân vụ tai nạn.",
     "link": "https://vnexpress.net/xe-bon-tong-oto-4-cho-lat-ngua-tren-duong-4865821.html",
@@ -1806,33 +1833,6 @@
     ]
   },
   {
-    "title": "5 món ăn giàu kẽm giúp tăng miễn dịch",
-    "content": "Bài viết giới thiệu 5 món ăn giàu kẽm giúp tăng cường hệ miễn dịch, bao gồm hàu, thịt bò, ức gà, các loại đậu và trứng. Hàu cung cấp lượng kẽm cao nhất, tiếp theo là thịt bò và ức gà, trong khi các loại đậu và trứng cũng là nguồn cung cấp kẽm và protein tốt. Những thực phẩm này không chỉ giúp tăng cường miễn dịch mà còn hỗ trợ sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/5-mon-an-giau-kem-giup-tang-mien-dich-4865564.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nào giúp tăng cường miễn dịch với kẽm?",
-    "answers": [
-      {
-        "text": "Hàu, thịt bò, ức gà, các loại đậu, trứng",
-        "correct": true
-      },
-      {
-        "text": "Cá hồi, chuối, dứa, hạt chia",
-        "correct": false
-      },
-      {
-        "text": "Bánh mì, bơ đậu phộng, sữa, rau chân vịt",
-        "correct": false
-      },
-      {
-        "text": "Mì tôm, nước ngọt, khoai tây chiên",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đau họng do viêm họng và trào ngược có khác nhau?",
     "content": "Đau họng do viêm họng và trào ngược họng thanh quản có những triệu chứng khác nhau. Viêm họng thường gây ra cảm giác đau, sưng đỏ và có thể sốt, trong khi trào ngược họng thường kèm theo nóng rát, ợ hơi và không có sốt. Điều trị hai loại bệnh này cũng khác nhau, với viêm họng có thể tự khỏi nhưng trào ngược cần thay đổi lối sống và điều trị nội khoa. Người bệnh nên đi khám để xác định nguyên nhân chính xác và có phương pháp điều trị phù hợp.",
     "link": "https://vnexpress.net/dau-hong-do-viem-hong-va-trao-nguoc-co-khac-nhau-4865609.html",
@@ -1855,6 +1855,33 @@
       },
       {
         "text": "Đau họng do viêm họng không liên quan đến nhiễm trùng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn giàu kẽm giúp tăng miễn dịch",
+    "content": "Bài viết giới thiệu 5 món ăn giàu kẽm giúp tăng cường hệ miễn dịch, bao gồm hàu, thịt bò, ức gà, các loại đậu và trứng. Hàu cung cấp lượng kẽm cao nhất, tiếp theo là thịt bò và ức gà, trong khi các loại đậu và trứng cũng là nguồn cung cấp kẽm và protein tốt. Những thực phẩm này không chỉ giúp tăng cường miễn dịch mà còn hỗ trợ sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/5-mon-an-giau-kem-giup-tang-mien-dich-4865564.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nào giúp tăng cường miễn dịch với kẽm?",
+    "answers": [
+      {
+        "text": "Hàu, thịt bò, ức gà, các loại đậu, trứng",
+        "correct": true
+      },
+      {
+        "text": "Cá hồi, chuối, dứa, hạt chia",
+        "correct": false
+      },
+      {
+        "text": "Bánh mì, bơ đậu phộng, sữa, rau chân vịt",
+        "correct": false
+      },
+      {
+        "text": "Mì tôm, nước ngọt, khoai tây chiên",
         "correct": false
       }
     ]
