Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -525,6 +525,37 @@
     ]
   },
   {
+    "title": "Sơn La, Điện Biên xuất hiện mưa đá",
+    "content": "Chiều 25/3, nhiều xã ở huyện Thuận Châu, Yên Châu (Sơn La) và huyện Tuần Giáo, Mường Ảng, TP Điện Biên Phủ (Điện Biên) đã xảy ra mưa đá. Mưa đá xuất hiện sau khi có mây đen kèm giông gió, kéo dài khoảng 15-30 phút với hạt đá to bằng đầu ngón tay. Nhiều nhà dân và diện tích hoa màu, đặc biệt là mận và đào, bị hư hại, nhưng chính quyền địa phương chưa tổng kết thiệt hại.",
+    "link": "https://vnexpress.net/son-la-dien-bien-xuat-hien-mua-da-4865824.html",
+    "cat": "thoi-su",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Mưa đá đã xảy ra ở những khu vực nào của Sơn La và Điện Biên?",
+    "answers": [
+      {
+        "text": "Huyện Thuận Châu, Yên Châu, Tuần Giáo, Mường Ảng, TP Điện Biên Phủ",
+        "correct": true
+      },
+      {
+        "text": "Huyện Mộc Châu và Bắc Yên",
+        "correct": false
+      },
+      {
+        "text": "Huyện Lai Châu và Điện Biên Đông",
+        "correct": false
+      },
+      {
+        "text": "Thành phố Sơn La và huyện Điện Biên",
+        "correct": false
+      },
+      {
+        "text": "Huyện Phù Yên và huyện Tân Lạc",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cảnh sát làm việc với người đàn ông để bé gái cầm vô lăng lái ô tô",
     "content": "Cảnh sát đã tiến hành làm việc với một người đàn ông tên N. vì đã để bé gái 8 tuổi cầm vô lăng điều khiển ô tô trong khi anh ta ngồi ở ghế lái. Sự việc được ghi lại trong một đoạn video và xảy ra trên Đường 100 thuộc huyện Bình Xuyên, tỉnh Vĩnh Phúc. Theo đánh giá của cơ quan chức năng, hành động này là cực kỳ nguy hiểm và vi phạm luật giao thông, với mức phạt có thể lên tới 30 triệu đồng.",
     "link": "https://tuoitre.vn/canh-sat-lam-viec-voi-nguoi-dan-ong-de-be-gai-cam-vo-lang-lai-o-to-20250325220607618.htm",
@@ -989,37 +1020,6 @@
     ]
   },
   {
-    "title": "U22 Trung Quốc - U22 Việt Nam: Viktor Lê đá chính",
-    "content": "U22 Việt Nam sẽ gặp U22 Trung Quốc trong trận giao hữu cuối cùng tại giải Tứ Hùng Diêm Thành. Viktor Lê được chọn đá chính trong đội hình xuất phát. Nếu Việt Nam thắng trận này, họ sẽ giành chức vô địch giải đấu, trong khi Trung Quốc hiện đang dẫn đầu với 4 điểm. Đây là trận đấu quyết định cho ngôi vô địch, với sự tham gia của bốn đội gồm Việt Nam, Trung Quốc, Hàn Quốc và Uzbekistan.",
-    "link": "https://vnexpress.net/truc-tiep-bong-da-u22-trung-quoc-vs-u22-viet-nam-4865729.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 9,
-    "question": "U22 Việt Nam có thể vô địch nếu thắng đội nào?",
-    "answers": [
-      {
-        "text": "U22 Trung Quốc",
-        "correct": true
-      },
-      {
-        "text": "U22 Hàn Quốc",
-        "correct": false
-      },
-      {
-        "text": "U22 Uzbekistan",
-        "correct": false
-      },
-      {
-        "text": "U22 Nhật Bản",
-        "correct": false
-      },
-      {
-        "text": "U22 Ấn Độ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Những thực phẩm lên men giúp tóc chắc khỏe",
     "content": "Thực phẩm lên men như sữa chua, kim chi và các sản phẩm từ đậu nành có tác dụng tốt cho sức khỏe tóc. Chúng cung cấp lợi khuẩn, vitamin B và chất chống oxy hóa, giúp nuôi dưỡng da đầu và thúc đẩy tóc mọc khỏe. Bác sĩ Hoàng Quyết Tiến cho biết, các lợi khuẩn này giúp cân bằng hệ vi sinh trên da đầu, ngăn ngừa gàu và viêm nhiễm, từ đó tạo điều kiện cho tóc phát triển tốt hơn. Tuy nhiên, cần sử dụng thực phẩm lên men một cách hợp lý để tránh ảnh hưởng xấu đến sức khỏe.",
     "link": "https://vnexpress.net/nhung-thuc-pham-len-men-giup-toc-chac-khoe-4865722.html",
@@ -1046,6 +1046,37 @@
       },
       {
         "text": "Chỉ dưa cải muối",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "U22 Trung Quốc - U22 Việt Nam: Viktor Lê đá chính",
+    "content": "U22 Việt Nam sẽ gặp U22 Trung Quốc trong trận giao hữu cuối cùng tại giải Tứ Hùng Diêm Thành. Viktor Lê được chọn đá chính trong đội hình xuất phát. Nếu Việt Nam thắng trận này, họ sẽ giành chức vô địch giải đấu, trong khi Trung Quốc hiện đang dẫn đầu với 4 điểm. Đây là trận đấu quyết định cho ngôi vô địch, với sự tham gia của bốn đội gồm Việt Nam, Trung Quốc, Hàn Quốc và Uzbekistan.",
+    "link": "https://vnexpress.net/truc-tiep-bong-da-u22-trung-quoc-vs-u22-viet-nam-4865729.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 9,
+    "question": "U22 Việt Nam có thể vô địch nếu thắng đội nào?",
+    "answers": [
+      {
+        "text": "U22 Trung Quốc",
+        "correct": true
+      },
+      {
+        "text": "U22 Hàn Quốc",
+        "correct": false
+      },
+      {
+        "text": "U22 Uzbekistan",
+        "correct": false
+      },
+      {
+        "text": "U22 Nhật Bản",
+        "correct": false
+      },
+      {
+        "text": "U22 Ấn Độ",
         "correct": false
       }
     ]
@@ -2237,33 +2268,6 @@
     ]
   },
   {
-    "title": "5 món ăn giàu kẽm giúp tăng miễn dịch",
-    "content": "Bài viết giới thiệu 5 món ăn giàu kẽm giúp tăng cường hệ miễn dịch, bao gồm hàu, thịt bò, ức gà, các loại đậu và trứng. Hàu cung cấp lượng kẽm cao nhất, tiếp theo là thịt bò và ức gà, trong khi các loại đậu và trứng cũng là nguồn cung cấp kẽm và protein tốt. Những thực phẩm này không chỉ giúp tăng cường miễn dịch mà còn hỗ trợ sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/5-mon-an-giau-kem-giup-tang-mien-dich-4865564.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nào giúp tăng cường miễn dịch với kẽm?",
-    "answers": [
-      {
-        "text": "Hàu, thịt bò, ức gà, các loại đậu, trứng",
-        "correct": true
-      },
-      {
-        "text": "Cá hồi, chuối, dứa, hạt chia",
-        "correct": false
-      },
-      {
-        "text": "Bánh mì, bơ đậu phộng, sữa, rau chân vịt",
-        "correct": false
-      },
-      {
-        "text": "Mì tôm, nước ngọt, khoai tây chiên",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đau họng do viêm họng và trào ngược có khác nhau?",
     "content": "Đau họng do viêm họng và trào ngược họng thanh quản có những triệu chứng khác nhau. Viêm họng thường gây ra cảm giác đau, sưng đỏ và có thể sốt, trong khi trào ngược họng thường kèm theo nóng rát, ợ hơi và không có sốt. Điều trị hai loại bệnh này cũng khác nhau, với viêm họng có thể tự khỏi nhưng trào ngược cần thay đổi lối sống và điều trị nội khoa. Người bệnh nên đi khám để xác định nguyên nhân chính xác và có phương pháp điều trị phù hợp.",
     "link": "https://vnexpress.net/dau-hong-do-viem-hong-va-trao-nguoc-co-khac-nhau-4865609.html",
@@ -2286,6 +2290,33 @@
       },
       {
         "text": "Đau họng do viêm họng không liên quan đến nhiễm trùng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn giàu kẽm giúp tăng miễn dịch",
+    "content": "Bài viết giới thiệu 5 món ăn giàu kẽm giúp tăng cường hệ miễn dịch, bao gồm hàu, thịt bò, ức gà, các loại đậu và trứng. Hàu cung cấp lượng kẽm cao nhất, tiếp theo là thịt bò và ức gà, trong khi các loại đậu và trứng cũng là nguồn cung cấp kẽm và protein tốt. Những thực phẩm này không chỉ giúp tăng cường miễn dịch mà còn hỗ trợ sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/5-mon-an-giau-kem-giup-tang-mien-dich-4865564.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nào giúp tăng cường miễn dịch với kẽm?",
+    "answers": [
+      {
+        "text": "Hàu, thịt bò, ức gà, các loại đậu, trứng",
+        "correct": true
+      },
+      {
+        "text": "Cá hồi, chuối, dứa, hạt chia",
+        "correct": false
+      },
+      {
+        "text": "Bánh mì, bơ đậu phộng, sữa, rau chân vịt",
+        "correct": false
+      },
+      {
+        "text": "Mì tôm, nước ngọt, khoai tây chiên",
         "correct": false
       }
     ]
